deploy/develop/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  selector:
    matchLabels:
      app: blue
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blue
      annotations:
        telepresence.getambassador.io/inject-traffic-agent: enabled
    spec:
      imagePullSecrets:
        - name: registry-auth
      restartPolicy: Always
      containers:
        - resources:
            requests: {}
            limits:
              cpu: 250m
              memory: 250M
          imagePullPolicy: Always
          image: dudo/blue:latest
          name: blue
          ports:
            - name: web
              containerPort: 80
          # envFrom:
          #   - configMapRef:
          #       name: blue-config
