deploy/develop/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  type: NodePort
  selector:
    app: blue
  ports:
    - name: web
      port: 80
      # targetPort: web
