deploy/develop/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: blue
                port:
                  name: web
